Examples/2024-03-taiko/result/slither_contracts/TaikoL1.txt
'solc --version' running
'solc /Users/tanzezhong/GPT4Bugs-main/Examples/2024-03-taiko/packages/protocol/contracts/L1/TaikoL1.sol --combined-json abi,ast,bin,bin-runtime,srcmap,srcmap-runtime,userdoc,devdoc,hashes --allow-paths .,/Users/tanzezhong/GPT4Bugs-main/Examples/2024-03-taiko/packages/protocol/contracts/L1' running
Compilation warnings/errors on /Users/tanzezhong/GPT4Bugs-main/Examples/2024-03-taiko/packages/protocol/contracts/L1/TaikoL1.sol:
Error: Undeclared identifier. Did you mean "blockhash"?
   --> packages/protocol/contracts/L1/libs/LibProposing.sol:157:34:
    |
157 |                 meta_.blobHash = blobhash(0);
    |                                  ^^^^^^^^


ERROR:Slither:Unable to compile all targets.
